--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 asgiref==3.7.2
-backports.zoneinfo==0.2.1
+beautifulsoup4==4.12.2
 Django==4.2.4
+django-bootstrap-v5==1.0.11
 django-mdeditor==0.1.20
-gunicorn==21.2.0
 Markdown==3.3.4
-packaging==23.1
+Pillow==10.0.0
 psycopg2-binary==2.9.7
+soupsieve==2.4.1
 sqlparse==0.4.4
-typing-extensions==4.7.1
+typing_extensions==4.7.1
+whitenoise==6.5.0
